开发练习商城栏目的增、删、改

--- a/dream/view/admin/templates/catedit.html
+++ b/dream/view/admin/templates/catedit.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>Dream 管理中心 - 添加分类 </title>
+<title>Dream 管理中心 - 修改分类 </title>
 <meta name="robots" content="noindex, nofollow">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link href="../view/admin/styles/general.css" rel="stylesheet" type="text/css" />
@@ -16,12 +16,12 @@
 </h1>
 
 <div class="main-div">
-  <form action="cateaddAct.php" method="post" name="theForm" enctype="multipart/form-data">
+  <form action="cateditAct.php" method="post" name="theForm" enctype="multipart/form-data">
   <table width="100%" id="general-table">
       <tr>
         <td class="label">分类名称:</td>
         <td>
-          <input type='text' name='cat_name' maxlength="20" value='' size='27' /> <font color="red">*</font>
+          <input type='text' name='cat_name' maxlength="20" value='<?php echo $catinfo['cat_name']?>' size='27' /> <font color="red">*</font>
         </td>
       </tr>
       <tr>
@@ -30,7 +30,8 @@
           <select name="parent_id">
                         <option value="0">顶级分类</option>
                         <?php foreach($catlist as $v) {?>
-                        <option value="<?php echo $v['cat_id'];?>">
+                        <option value="<?php echo $v['cat_id'];?>"
+                          <?php echo $v['cat_id'] == $catinfo['parent_id']?"selected":''?>>
                           <?php echo str_repeat('&nbsp;',$v['level']),$v['cat_name'];?>
                         </option>
                         <?php }?>
@@ -41,7 +42,7 @@
       <tr>
         <td class="label">栏目简介:</td>
         <td>
-          <textarea name='intro' rows="6" cols="48"></textarea>
+          <textarea name='intro' rows="6" cols="48"><?php echo $catinfo['intro']?></textarea>
         </td>
       </tr>
       </table>
@@ -49,9 +50,7 @@
         <input type="submit" value=" 确定 " />
         <input type="reset" value=" 重置 " />
       </div>
-    <input type="hidden" name="act" value="insert" />
-    <input type="hidden" name="old_cat_name" value="" />
-    <input type="hidden" name="cat_id" value="" />
+    <input type="hidden" name="cat_id" value="<?php echo $catinfo['cat_id']?>" />
   </form>
 </div>
 
