--- a/dream/view/admin/templates/goodsadd.html
+++ b/dream/view/admin/templates/goodsadd.html
@@ -24,7 +24,7 @@ function charea(a) {
 
 <h1>
 <span class="action-span"><a href="goods.php?act=list">商品列表</a></span>
-<span class="action-span1"><a href="index.php?act=main">ECSHOP 管理中心</a> </span><span id="search_id" class="action-span1"> - 添加新商品 </span>
+<span class="action-span1"><a href="index.php?act=main">Dream 管理中心</a> </span><span id="search_id" class="action-span1"> - 添加新商品 </span>
 <div style="clear:both"></div>
 </h1>
 
