--- a/dream/view/admin/templates/main.html
+++ b/dream/view/admin/templates/main.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>ECSHOP 管理中心</title>
+<title>Dream 管理中心</title>
 <meta name="robots" content="noindex, nofollow">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link href="../view/admin/styles/general.css" rel="stylesheet" type="text/css" />
@@ -10,7 +10,7 @@
 <body>
 
 <h1>
-<span class="action-span1"><a href="#">ECSHOP 管理中心</a> </span><span id="search_id" class="action-span1"></span>
+<span class="action-span1"><a href="#">Dream 管理中心</a> </span><span id="search_id" class="action-span1"></span>
 <div style="clear:both"></div>
 </h1>
 <ul id="lilist" style="padding:0; margin: 0; list-style-type:none; color: #CC0000;">
@@ -183,7 +183,7 @@
     <td>2M</td>
   </tr>
   <tr>
-    <td>ECShop 版本:</td>
+    <td>Dream 版本:</td>
     <td>v2.7.2 RELEASE 20100604</td>
     <td>安装日期:</td>
     <td>2011-11-03</td>
