--- a/dream/view/admin/templates/top.html
+++ b/dream/view/admin/templates/top.html
@@ -107,11 +107,11 @@
 <body>
 <div id="header-div">
 
-  <div id="logo-div" style="bgcolor:#000000;"><img src="../view/admin/images/ecshop_logo.gif" alt="ECSHOP - power for e-commerce" /></div>
+  <div id="logo-div" style="bgcolor:#000000;"><img src="../view/admin/images/Dream_logo.gif" alt="Dream - power for e-commerce" /></div>
   <div id="license-div" style="bgcolor:#000000;"></div>
   <div id="submenu-div">
     <ul>
-      <li><a href="#" target="main-frame">关于 ECSHOP</a></li>
+      <li><a href="#" target="main-frame">关于 Dream</a></li>
       <li><a href="#">帮助</a></li>
       <li><a href="#">计算器</a></li>
 
