--- a/dream/view/admin/templates/goodslist.html
+++ b/dream/view/admin/templates/goodslist.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>ECSHOP 管理中心 - 商品列表 </title>
+<title>Dream 管理中心 - 商品列表 </title>
 <meta name="robots" c>
 <meta http-equiv="Content-Type" c />
 <link href="../view/admin/styles/general.css" rel="stylesheet" type="text/css" />
@@ -11,7 +11,7 @@
 
 <h1>
 <span class="action-span"><a href="goodsadd.html">添加新商品</a></span>
-<span class="action-span1"><a href="#">ECSHOP 管理中心</a> </span><span id="search_id" class="action-span1"> - 商品列表 </span>
+<span class="action-span1"><a href="#">Dream 管理中心</a> </span><span id="search_id" class="action-span1"> - 商品列表 </span>
 <div style="clear:both"></div>
 </h1>
 
