添加了商品回收站功能

--- a/dream/view/admin/templates/left.html
+++ b/dream/view/admin/templates/left.html
@@ -138,6 +138,11 @@ body {
           <li class="menu-item"><a href="#" target="main-frame">会员列表</a></li>
         </ul>
       </li>
+       <li class="explode" key="04_order" name="menu">
+    商品回收站        <ul>
+          <li class="menu-item"><a href="goodstrash.php?act=show" target="main-frame">回收商品</a></li>
+        </ul>
+      </li>
 
 </ul>
 </div>
