添加了商品上传图片功能用到上传工具类UpTool

--- a/dream/view/admin/templates/goodsadd.html
+++ b/dream/view/admin/templates/goodsadd.html
@@ -75,7 +75,7 @@ function charea(a) {
           <tr>
             <td class="label">上传商品图片：</td>
             <td>
-              <input type="file" name="goods_img" size="35" />
+              <input type="file" name="ori_img" size="35" />
             </td>
           </tr>
         </table>
