实现用户登陆退出功能

--- a/dream/view/front/denglu.html
+++ b/dream/view/front/denglu.html
@@ -6,7 +6,7 @@
 <meta name="Keywords" content="">
 <meta name="Description" content="">
 
-<title>用户中心_布尔正装商城-职业装|面试正装|求职正装|男士正装|女士正装|正装衬衫-源于北京,服务全国</title>
+<title>用户中心_Dream正装商城-职业装|面试正装|求职正装|男士正装|女士正装|正装衬衫-源于北京,服务全国</title>
 
 <link rel="shortcut icon" href="http://www.zhongyis.com/favicon.ico">
 <link rel="icon" href="http://www.zhongyis.com/animated_favicon.gif" type="image/gif">
@@ -161,7 +161,7 @@
   <div class="usBox_1 f_l">
    <div class="logtitle"></div>
    <div style="color:#999; padding:30px 20px 10px 30px;">已注册用户请从这里登录</div>
-   <form onsubmit="return userLogin()" method="post" action="./images/denglu.htm" name="formLogin">
+   <form onsubmit="return userLogin()" method="post" action="login.php" name="formLogin">
         <table width="100%" cellspacing="5" cellpadding="3" border="0" align="left" class="user_table">
           <tbody><tr>
             <td width="15%" align="right">用户名</td>
@@ -170,11 +170,11 @@
           <tr>
             <td align="right">密码</td>
             <td>
-            <input type="password" class="inputBg" name="password">
+            <input type="password" class="inputBg" name="passwd">
             </td>
           </tr>
                     <tr>
-            <td colspan="2"><input type="checkbox" id="remember" name="remember" value="1"><label for="remember">请保存我这次的登录信息。</label></td>
+            <td colspan="2"><input type="checkbox" id="remember" name="remember" value="1"><label for="remember">记住用户名</label></td>
           </tr>
           <tr>
             <td>&nbsp;</td>
