--- a/dream/view/front/shangpin.html
+++ b/dream/view/front/shangpin.html
@@ -6,7 +6,7 @@
 
 <meta name="Keywords" content="">
 <meta name="Description" content="">
-<title>两扣双开衩平驳头斜兜男士西服套装3312/纯藏青色人字纹/羊毛+涤纶_男士正装_布尔正装商城-职业装|面试正装|求职正装|男士正装|女士正装|正装衬衫-源于北京,服务全国</title>
+<title>两扣双开衩平驳头斜兜男士西服套装3312/纯藏青色人字纹/羊毛+涤纶_男士正装_Dream正装商城-职业装|面试正装|求职正装|男士正装|女士正装|正装衬衫-源于北京,服务全国</title>
 <link rel="shortcut icon" href="http://www.zhongyis.com/favicon.ico">
 <link rel="icon" href="http://www.zhongyis.com/animated_favicon.gif" type="image/gif">
 <link href="./view/front/css/style.css" rel="stylesheet" type="text/css">
@@ -20,7 +20,7 @@
     	<div class="logo f_l"><a href="#"><img src="./view/front/images/logo.gif"></a></div>
         <div class="member_login f_l">
             <font id="ECS_MEMBERZONE"><div id="append_parent"></div>
- 欢迎光临布尔！&nbsp;&nbsp;&nbsp;&nbsp;
+ 欢迎光临Dream！&nbsp;&nbsp;&nbsp;&nbsp;
  <a href="#">登录</a> | <a href="#">注册</a>
  </font>            
             </div>
@@ -36,7 +36,7 @@
                    	
             <div class="telinfo">
 			<div><a href="#">
- <img border="0" src="./view/front/images/pa" alt="布尔QQ客服"></a></div>
+ <img border="0" src="./view/front/images/pa" alt="DreamQQ客服"></a></div>
  </div>
             
             
