--- a/dream/view/front/msg.html
+++ b/dream/view/front/msg.html
@@ -8,7 +8,7 @@
 <meta name="Description" content="">
 
 
-<title>系统提示_布尔正装商城-职业装|面试正装|求职正装|男士正装|女士正装|正装衬衫-源于北京,服务全国</title>
+<title>系统提示_Dream正装商城-职业装|面试正装|求职正装|男士正装|女士正装|正装衬衫-源于北京,服务全国</title>
 
 <link rel="shortcut icon" href="http://www.zhongyis.com/favicon.ico">
 <link rel="icon" href="http://www.zhongyis.com/animated_favicon.gif" type="image/gif">
@@ -26,8 +26,8 @@
     	<div class="logo f_l"><a href="#"><img src="./view/front/images/logo.gif"></a></div>
         <div class="member_login f_l">
         <font id="ECS_MEMBERZONE"><div id="append_parent"></div>
- 欢迎光临布尔！&nbsp;&nbsp;&nbsp;&nbsp;
- <a href="#">登录</a> | <a href="#">注册</a>
+ 欢迎光临Dream！&nbsp;&nbsp;&nbsp;&nbsp;
+ <a href="login.php">登录</a> | <a href="#">注册</a>
  </font>            
             </div>
 
@@ -43,7 +43,7 @@
                    	
             <div class="telinfo">
 			<div><a href="#">
- <img border="0" alt="布尔QQ客服" src="./view/front/images/pa"></a></div>
+ <img border="0" alt="DreamQQ客服" src="./view/front/images/pa"></a></div>
  </div>
             
             
