--- a/dream/view/front/zhongxin.html
+++ b/dream/view/front/zhongxin.html
@@ -7,7 +7,7 @@
 <meta name="Keywords" content="">
 <meta name="Description" content="">
 
-<title>用户中心_布尔正装商城-职业装|面试正装|求职正装|男士正装|女士正装|正装衬衫-源于北京,服务全国</title>
+<title>用户中心_Dream正装商城-职业装|面试正装|求职正装|男士正装|女士正装|正装衬衫-源于北京,服务全国</title>
 
 <link rel="shortcut icon" href="http://www.zhongyis.com/favicon.ico">
 <link rel="icon" href="http://www.zhongyis.com/animated_favicon.gif" type="image/gif">
@@ -44,7 +44,7 @@
                    	
             <div class="telinfo">
 			<div><a href="#">
- <img border="0" src="./view/front/images/pa" alt="布尔QQ客服"></a></div>
+ <img border="0" src="./view/front/images/pa" alt="DreamQQ客服"></a></div>
  </div>
             
             
@@ -189,7 +189,7 @@
      <div class="box_1">
       <div class="userCenterBox boxCenterList clearfix" style="_height:1%;">
          
-                   <font class="f5"><b class="f4">嘻嘻哈哈</b> 欢迎您回到 布尔正装网！</font><br>
+                   <font class="f5"><b class="f4">嘻嘻哈哈</b> 欢迎您回到 Dream正装网！</font><br>
           <div class="blank"></div>
           您的上一次登录时间: 2012-11-11 11:49:03<br>
           <div class="blank5"></div>
