实现cookie记住用户名

--- a/dream/view/front/denglu.html
+++ b/dream/view/front/denglu.html
@@ -25,7 +25,7 @@
     	<div class="logo f_l"><a href="#"><img src="./view/front/images/logo.gif"></a></div>
         <div class="member_login f_l">
               			 <font id="ECS_MEMBERZONE"><div id="append_parent"></div>
- 欢迎光临布尔！&nbsp;&nbsp;&nbsp;&nbsp;
+ 欢迎光临Dream！&nbsp;&nbsp;&nbsp;&nbsp;
  <a href="#">登录</a> | <a href="#">注册</a>
  </font>            
             </div>
@@ -42,7 +42,7 @@
                    	
             <div class="telinfo">
 			<div><a href="#">
- <img border="0" alt="布尔QQ客服" src="./view/front/images/pa"></a></div>
+ <img border="0" alt="DreamQQ客服" src="./view/front/images/pa"></a></div>
  </div>
             
             
@@ -164,8 +164,8 @@
    <form onsubmit="return userLogin()" method="post" action="login.php" name="formLogin">
         <table width="100%" cellspacing="5" cellpadding="3" border="0" align="left" class="user_table">
           <tbody><tr>
-            <td width="15%" align="right">用户名</td>
-            <td width="85%"><input type="text" class="inputBg" name="username"></td>
+            <td width="15%" align="right" >用户名</td>
+            <td width="85%"><input type="text" class="inputBg"  value="<?php echo $remuser;?>" name="username"></td>
           </tr>
           <tr>
             <td align="right">密码</td>
