--- a/dream/view/front/index.html
+++ b/dream/view/front/index.html
@@ -1,7 +1,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta content="ECSHOP v2.7.2" name="Generator">
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
-<title>中意斯正装商城-职业装|面试正装|求职正装|男士正装|女士正装|正装衬衫-源于北京,服务全国</title>
+<title>Dream正装商城-职业装|面试正装|求职正装|男士正装|女士正装|正装衬衫-源于北京,服务全国</title>
 <link href="favicon.ico" rel="shortcut icon">
 <link type="image/gif" href="animated_favicon.gif" rel="icon">
 <link type="text/css" rel="stylesheet" href="./view/front/css/style.css">
@@ -39,7 +39,7 @@
 
        <div class="telinfo">
          <div><a href="#">
-           <img border="0" alt="中意斯QQ客服" src="http://wpa.qq.com/pa?p=2:247134821:41"></a></div>
+           <img border="0" alt="DreamQQ客服" src="http://wpa.qq.com/pa?p=2:247134821:41"></a></div>
          </div>
 
 
@@ -165,32 +165,32 @@
                  <div class="lib_mid">
                    <ul class="listitem">
                     <li>
-                      <a title="中意斯创始人参加“达沃斯”论坛" href="article.php?id=69" style="color:#7f0019" target="_blank">中意斯创始人参加“达沃斯”论坛</a>
+                      <a title="Dream创始人参加“达沃斯”论坛" href="article.php?id=69" style="color:#7f0019" target="_blank">Dream创始人参加“达沃斯”论坛</a>
                     </li>
 
 
 
 
                     <li>
-                      <a title="刘淇书记视察“中意斯”创业项目" href="article.php?id=64" target="_blank">刘淇书记视察“中意斯”创业项目</a>
+                      <a title="刘淇书记视察“Dream”创业项目" href="article.php?id=64" target="_blank">刘淇书记视察“Dream”创业项目</a>
                     </li>
 
 
 
                     <li>
-                      <a title="中意斯正装获得诚信经营企业颁牌" href="article.php?id=63" target="_blank">中意斯正装获得诚信经营企业颁牌</a>
+                      <a title="Dream正装获得诚信经营企业颁牌" href="article.php?id=63" target="_blank">Dream正装获得诚信经营企业颁牌</a>
                     </li>
 
 
 
                     <li>
-                      <a title="中意斯被评为北京青年创业之星" href="article.php?id=56" target="_blank">中意斯被评为北京青年创业之星</a>
+                      <a title="Dream被评为北京青年创业之星" href="article.php?id=56" target="_blank">Dream被评为北京青年创业之星</a>
                     </li>
 
 
 
                     <li>
-                      <a title="阿根廷企业家联盟访问中意斯正装" href="article.php?id=55" target="_blank">阿根廷企业家联盟访问中意斯正装</a>
+                      <a title="阿根廷企业家联盟访问Dream正装" href="article.php?id=55" target="_blank">阿根廷企业家联盟访问Dream正装</a>
                     </li>
 
                   </ul>
